:bug: Fix bubbles getting displaced when thread does not fit in viewport

--- a/frontend/src/app/main/ui/workspace/viewport/comments.scss
+++ b/frontend/src/app/main/ui/workspace/viewport/comments.scss
@@ -19,9 +19,5 @@
 }
 
 .threads {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  position: fixed;
 }
